--- a/package.json
+++ b/package.json
@@ -5,8 +5,14 @@
     "dev": "gulp watch"
   },
   "devDependencies": {
-    "bootstrap-sass": "^3.0.0",
+	"bootstrap": "^3.3.7",
+    "bootstrap-sass": "^3.3.7",
+	"font-awesome": "^4.7.0",
+    "gentelella": "^1.4.0",
+	"jquery": "^3.2.1",
     "gulp": "^3.9.1",
-    "laravel-elixir": "^5.0.0"
+    "laravel-elixir": "^5.0.0",
+	"select2": "^4.0.3",
+    "vue": "^2.1.10"
   }
 }
