--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -2,6 +2,7 @@
   "/mix.js": "/mix.c79696d3c0ad1e414cde.js",
   "/js/app.js": "/js/app.cb4b4f57e6d542b31c258d38bf63ca54.js",
   "/css/app.css": "/css/app.0874df32067411f3a7adec84cd0d9789.css",
-  "/js/source.js": "/js/source.19e82e49c2feac84c1a5c9c534964c44.js",
-  "/css/source.css": "/css/source.fbfba7add28dfc0227d2ae0eb163055c.css"
+  "/js/source.js": "/js/source.9b6fd95e6c58f761c94d3e1a25d3cd3e.js",
+  "/css/source.css": "/css/source.02b8ab8bd624bfc9706e34354135a000.css",
+  "/js/vue.js": "/js/vue.440e570c372631aa20b9c778ad9e7273.js"
 }
